# mail

./: .gitignore  Cargo.toml  README.md  build.rs
__examples/: composition.rs
components/: Cargo.toml
components/src/: cfws.rs  date_time.rs  disposition.rs  email.rs  error.rs  lib.rs  mailbox.rs  mailbox_list.rs  media_type.rs  message_id.rs  mime_tools.rs  mod.rs  path.rs  phrase.rs  phrase_list.rs  received_token.rs  transfer_encoding.rs  unstructured.rs  word.rs
components/src/utils/: mod.rs  text_partition.rs
core/: Cargo.toml  README.md  test.sh
core/examples/: readme.rs
core/notes/: notes.md  structure.md
core/notes/features/: archive_resources.md
core/src/: compose.rs  context.rs  encode.rs  error.rs  grammar.rs  iri.rs  lib.rs  macros.rs  mail.rs  mime.rs  test_utils.rs  utils.rs
core/src/codec/: base64.rs  encoder.rs  mime.rs  mod.rs  quoted_string.rs  transfer_encoding.rs  writer_impl.rs
core/src/components/: mod.rs
core/src/data/: inner_item.rs  input.rs  mod.rs  simple_item.rs
core/src/default_impl/: cpupool.rs  fs.rs  message_id_gen.rs  mod.rs  mux.rs  simple_context.rs
core/src/headers/: header_macro.rs  headers.gen.spec  mod.rs
core/src/headers/map/: into_iter.rs  mod.rs
core/src/resource/: data.rs  loading.rs  mod.rs  source.rs
core/src/utils/: buffer.rs  date_time.rs  mod.rs
core/test_resources/: text.txt  text.utf8.txt
core/tests/: mail.rs
core/tests/resource/: load_file.rs  mod.rs
examples/: composition.rs  raw_mail.rs  raw_mail_multipart.rs
headers/: Cargo.toml  README.md  test.sh
headers/doc/: list_of_headers.txt
headers/src/: convert.rs  error.rs  header.rs  header_macro.rs  headers.rs  lib.rs  macros.rs  name.rs
headers/src/data/: inner_item.rs  input.rs  mod.rs  simple_item.rs
headers/src/header_components/: cfws.rs  date_time.rs  disposition.rs  email.rs  file_meta.rs  mailbox.rs  mailbox_list.rs  media_type.rs  message_id.rs  mod.rs  path.rs  phrase.rs  phrase_list.rs  raw_unstructured.rs  received_token.rs  transfer_encoding.rs  unstructured.rs  word.rs
headers/src/header_components/utils/: mod.rs  text_partition.rs
headers/src/map/: into_iter.rs  mod.rs
internals/: Cargo.toml  README.md
internals/src/: error.rs  grammar.rs  lib.rs  macros.rs  mail_type.rs
internals/src/bind/: base64.rs  idna.rs  mime.rs  mod.rs  quoted_printable.rs  quoted_string.rs
internals/src/bind/encoded_word/: impls.rs  mod.rs
internals/src/encoder/: encodable.rs  mod.rs  trace.rs
internals/src/utils/: mod.rs
mail/: CHANGE_LOG.md  Cargo.toml  README.md
mail/example_resources/templates/template_a/: mail.html  mail.txt  template.toml
mail/examples/: mail_by_hand.rs
mail/examples/mail_from_template/: error.rs  main.rs
mail/examples/send_mail/: cli.rs  main.rs
mail/src/: lib.rs  macros.rs
notes/: notes.md
smtp/: Cargo.toml
smtp/src/: error.rs  lib.rs  request.rs  resolve_all.rs  send_mail.rs
src/: additional_cid.rs  base_dir.rs  builder_extension.rs  char_validators.rs  compositor.rs  context.rs  error.rs  file_buffer.rs  grammar.rs  lib.rs  macros.rs  path_rebase.rs  resource.rs  serde_impl.rs  template.rs  template_engine.rs  utils.rs
src/askama_engine/: error.rs  mod.rs
src/codec/: base64.rs  encoder.rs  encoder_impl.rs  idna.rs  mime.rs  mod.rs  quote.rs  quoted_printable.rs  quoted_string.rs  test_utils.rs  traits.rs  transfer_encoding.rs  utf8_to_ascii.rs  writer_impl.rs
src/components/: cfws.rs  date_time.rs  disposition.rs  email.rs  header_name.rs  mailbox.rs  mailbox_list.rs  message_id.rs  mime.rs  mod.rs  path.rs  phrase.rs  phrase_list.rs  received_token.rs  transfer_encoding.rs  unstructured.rs  word.rs
src/components/utils/: item.rs  mod.rs  text_partition.rs
src/composition/: context.rs  mod.rs  resource.rs  templates.rs
src/compositor/: _impl.rs  builder.rs  composition_base_impl.rs  impl_compose.rs  mail_send_data.rs  mod.rs
src/data/: encoded_word.rs  inner_item.rs  input.rs  mod.rs  quoted.rs  simple_item.rs
src/default_impl/: component_id.rs  cpupool.rs  data_interface.rs  fs.rs  mod.rs  name_composer.rs  simple_builder.rs  simple_context.rs  vfs.rs
src/headers/: default_header.rs  mod.rs
src/headers/map/: into_iter.rs  iter.rs  mod.rs
src/items/: encoded_word.rs  inner_item.rs  input.rs  item.rs  mod.rs  quoted.rs  simple_item.rs
src/mail/: body.rs  builder.rs  context.rs  encode.rs  mime.rs  mod.rs  resource.rs
src/mail/builder/: context.rs  mod.rs  test_utils.rs
src/mail_composition/: context.rs  data.rs  mod.rs  resource.rs  serializer.rs  templates.rs
src/render_template_engine/: error.rs  from_dir.rs  mod.rs  settings.rs  utils.rs
src/resource/: impl_inspect.rs  mod.rs
src/smtp/: common.rs  error.rs  handle.rs  mod.rs  service.rs  smtp_wrapper.rs  test.rs
src/tera/: error.rs  mod.rs
src/types/: buffer.rs  date_time.rs  file_meta.rs  mod.rs  vec1.rs
src/utils/: buffer.rs  date_time.rs  file_meta.rs  mod.rs  vec1.rs
template/: Cargo.toml  README.md
template/notes/: notes.md
template/src/: additional_cid.rs  base_dir.rs  error.rs  handlebars.rs  lib.rs  path_rebase.rs  serde_impl.rs
test/: todo_tests.md
test_resources/: ascii_text.txt  template_a.out.regex  utf8_text.txt
test_resources/template_a/html/: mail.html
test_resources/templates/template_a/html/: mail.html
test_resources/tera_base/: base_mail.html
tests/: mail.rs  rte.rs
tests/load_spec/: mod.rs
tests/resource/: load_file.rs  mod.rs
tests/rte/: main.rs
tests/tera/: main.rs
vec1/src/: lib.rs
