[package]
name = "mail-template"
version = "0.2.0"
description = "[internal/mail-api] provides a \"composition through template\"  api for the Mail type from the mail-api crates"
authors = ["Philipp Korber <p.korber@1aim.com>"]
keywords = ["mail-api", "internal"]
categories = []
license = "MIT OR Apache-2.0"
readme = "./README.md"
documentation = "https://docs.rs/mail-template"
repository = "https://github.com/1aim/mail-template"


[dependencies]
mail-types = { git="https://github.com/1aim/mail-types" }
mail-common = { git="https://github.com/1aim/mail-common" }
mail-headers = { git="https://github.com/1aim/mail-headers" }
mail-derive = { git="https://github.com/1aim/mail-derive" }

failure = "0.1.1"
futures = "0.1.14"
log = "0.3.8"
rand = "0.3.15"
chrono = "0.4.0"
vec1 = { git="https://github.com/1aim/vec1" }
soft-ascii-string = "0.2.0"

futures-cpupool = { version = "0.1.5", optional = true }
tera = { version = "0.11.1", optional = true }
conduit-mime-types = { version = "0.7.3", optional = true}
lazy_static = { version = "1.0.0", optional = true }

[dependencies.mime]
git="https://github.com/1aim/mime"
branch="parser_revamp"
version="0.4.0"


[dev-dependencies]
serde_json = "1.0.2"
regex = "0.2.6"

[features]
debug_trace_tokens = []
render-template-engine = ["conduit-mime-types", "lazy_static"]
tera-bindings = ["tera", "render-template-engine"]
default = []