[package]
name = "mail-codec-components"
version = "0.0.1"
authors = ["Philipp Korber <philippkorber@gmail.com>"]
description = "TODO"
documentation = "https://docs.rs/mail-codec-components"
keywords = []
categories = []
license = "MIT OR Apache-2.0"
repository = "https://github.com/1aim/mail-codec"

[dependencies]
nom = "3.1.0"
quick-error = "1.2.1"
soft-ascii-string = "0.2"
quoted-string = { git="https://github.com/1aim/quoted-string", version="0.5" }

[dependencies.mime]
git="https://github.com/1aim/mime"
branch="parser_revamp"
features=["expose-param-utils"]
version="0.4.0"

[dependencies.mail-codec-core]
path = "../core"

[dependencies.vec1]
path = "../vec1"

[dev-dependencies]
chrono = "0.4.0"


[features]
traceing = [ "mail-codec-core/traceing" ]