[package]
authors = ["Philipp Korber <p.korber@1aim.com>"]
name = "mail-codec-core"
description = "TODO"
documentation = "https://docs.rs/mail-codec-core"
keywords = []
categories = []
license = "MIT OR Apache-2.0"
repository = "https://github.com/1aim/mail-codec"
version = "0.0.1"


[dependencies]
nom = "3.1.0"
error-chain = "0.11.0"
owning_ref = "0.3.3"
chrono = "0.4.0"
mime = "0.3.2"
base64 = "0.6.0"
quoted_printable = "0.4.0"
idna = "0.1.4"
percent-encoding = "1.0.0"
serde = "1.0.10"
serde_derive = "1.0.10"

[dependencies.vec1]
path = "../vec1"

[dependencies.soft-ascii-string]
git = "https://github.com/1aim/soft-ascii-string"

[dependencies.total-order-multi-map]
path = "../total-order-multi-map"


[features]
default = []
traceing = []
