[package]
name = "mail-core"
version = "0.6.0"
description = "[mail/core] provides the Mail type for the mail crate (inkl. multipart mime bodies, builder and resource type)"
authors = ["Philipp Korber <p.korber@1aim.com>"]
keywords = ["mail-api", "internal"]
categories = []
license = "MIT OR Apache-2.0"
readme = "./README.md"
documentation = "https://docs.rs/mail-core"
repository = "https://github.com/1aim/mail-core"

[features]
serde-impl = ["serde", "mail-headers/serde-impl"]
default = ["default_impl_cpupool"]
default_impl_cpupool = ["futures-cpupool"]
test-utils = ["default", "lazy_static"]

[dependencies]
mail-internals = "0.2.0"
mail-headers = "0.6.0"
failure = "0.1.2"
futures = "0.1.24"
log = "0.3.8"
rand = "0.3.15"
vec1 = "1"
chrono = "0.4"
soft-ascii-string = "1.0"
serde = { version="1.0", optional=true, features=["derive"] }
checked_command = "0.2.2"
lazy_static = { version="1.2.0", optional=true }

media-type = "0.4.0-unstable"

[dependencies.futures-cpupool]
optional = true
version = "0.1.5"

[dev-dependencies]
serde_json = "1.0"
serde_test = "1.0.80"

