[package]
name = "mail-headers"
description = "[mail/headers] header parts for the mail crate (inkl. header map and standard header impl)"
version = "0.6.4"
authors = ["Philipp Korber <philippkorber@gmail.com>"]
documentation = "https://docs.rs/mail-headers"
keywords = []
categories = []
license = "MIT OR Apache-2.0"
repository = "https://github.com/1aim/mail-headers"

[features]
serde-impl = [ "serde", "vec1/serde" ]
traceing = [ "mail-internals/traceing" ]

[dependencies]
mail-internals = "0.2.2"
failure = "0.1"
owning_ref = "0.4"
nom = "3.1.0"
soft-ascii-string = "1"
quoted-string = "0.6"
vec1 = "1"
chrono = "0.4"
total-order-multi-map = "0.4.5"
serde = { version="1.0", optional=true, features=["derive"] }
media-type = "0.4.0-unstable"

[dev-dependencies]
serde_test = "1.0.80"
