[package]
name = "mail"
version = "0.1.0"
authors = ["Philipp Korber <philippkorber@gmail.com>"]
categories = []
#TODO go through the keywords
keywords = ["mail", "rfc5322", "email", "mime", "smtp", "template"]
description = "mail, facade for a number of mail related crates for creating and sending mails"
license = "MIT OR Apache-2.0"
readme = "./README.md"
repository = "https://github.com/1aim/mail"
autoexamples = false

[features]
smtp = ["mail-smtp"]
handlebars = ["mail-template/handlebars-bindings"]

traceing = ["mail-internals/traceing", "mail-headers/traceing"]
test-utils = ["mail-core/test-utils"]

[[example]]
name = "mail_by_hand"
path = "examples/mail_by_hand.rs"

[[example]]
name = "mail_from_template"
path = "examples/mail_from_template/main.rs"
required-features = ["handlebars"]

[[example]]
name = "send_mail"
path = "examples/send_mail/main.rs"
required-features = ["smtp"]


[dependencies]
mail-internals =  { path="../internals" }
mail-headers =  { path="../headers" }
mail-core =  { path="../core" }
mail-template = { path="../template" }
mail-smtp =  { path="../smtp", optional=true }

[dev-dependencies]
rpassword = "2.0.0"
tokio = "0.1.1"
serde = "1.0.10"
serde_derive = "1.0.10"
soft-ascii-string = "1.0"
futures = "0.1.0"
failure = "0.1.1"


