[package]
name = "mail"
version = "0.6.5"
authors = ["Philipp Korber <p.korber@1aim.com>"]
categories = []
keywords = ["mail", "rfc5322", "mime", "smtp", "template"]
description = "mail, facade for a number of mail related crates for creating and sending mails"
license = "MIT OR Apache-2.0"
readme = "./README.md"
repository = "https://github.com/1aim/mail"
autoexamples = true

[features]
smtp = ["mail-smtp"]
handlebars = ["mail-template/handlebars-bindings"]
traceing = ["mail-internals/traceing", "mail-headers/traceing"]
test-utils = ["mail-core/test-utils"]
serde-impl = ["mail-core/serde-impl", "mail-headers/serde-impl"]

[[example]]
name = "mail_by_hand"
path = "examples/mail_by_hand.rs"

[[example]]
name = "mail_from_template"
path = "examples/mail_from_template/main.rs"
required-features = ["handlebars"]

[[example]]
name = "send_mail"
path = "examples/send_mail/main.rs"
required-features = ["smtp"]


[dependencies]
mail-internals = "0.2.0"
mail-headers =  "0.6.2"
mail-core =  "0.6.1"
mail-template = "0.6.0"
mail-smtp =  { version="0.2.0", optional=true }

[dev-dependencies]
rpassword = "2.0.0"
tokio = "0.1.1"
serde = "1.0.10"
serde_derive = "1.0.10"
soft-ascii-string = "1.0"
futures = "0.1.0"
failure = "0.1.1"


