[package]
authors = ["Philipp Korber <p.korber@1aim.com>"]
name = "mail-smtp"
version = "0.2.2"
categories = []
description = "[mail/smtp] combines mail-core with new-tokio-smtp"
documentation = "https://docs.rs/mail-smtp"
keywords = ["mail-api"]
license = "MIT OR Apache-2.0"
readme = "./README.md"
repository = "https://github.com/1aim/mail-smtp"

[dependencies]
futures = "0.1"
failure = "0.1.5"
mail-core = "0.6.2"
mail-headers = "0.6.6"
mail-internals = "0.2.3"
new-tokio-smtp = "0.8.1"

[features]
test-with-traceing = ["mail-internals/traceing"]
extended-api = []


[dev-dependencies]
mail-core = { version="0.6.0", features=["test-utils"] }