[package]
name = "mail-template"
version = "0.6.0"
description = "[mail] provides a way to create bind string template engines to produce mails"
authors = ["Philipp Korber <p.korber@1aim.com>"]
keywords = ["mail", "template", "handlebars"]
categories = []
license = "MIT OR Apache-2.0"
readme = "./README.md"
documentation = "https://docs.rs/mail-template"
repository = "https://github.com/1aim/mail-template"

[features]
default = []
handlebars-bindings = ["handlebars"]

[package.metadata.docs.rs]
features = [ "handlebars-bindings" ]

[dependencies]
mail-core = { version="0.6.1", features=["serde-impl"] }
mail-internals = "0.2.3"
mail-headers = { version="0.6.4", features=["serde-impl"] }

failure = "0.1.1"
futures = "0.1.14"
vec1 = { version="1.3.0", features=["serde"]}
soft-ascii-string = "1.0"
serde = { version="1", features=["derive"] }
toml = "0.4.8"
maybe-owned = "0.3.2"

handlebars = { version="1.1.0", optional=true }




[dev-dependencies]

